--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
 
@@ -226,7 +226,7 @@
 </footer>
 
 <body>
-    <script src="/assets/js/js.js"></script>
+    <script src="assets/js/js.js"></script>
 </body>
 
 </html>
